--- a/CalabozosYDragones-lab/Form1.resx
+++ b/CalabozosYDragones-lab/Form1.resx
@@ -17571,7 +17571,7 @@
         gg==
 </value>
   </data>
-  <data name="DragoncitoHumano2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="DragonRosa2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADEAAABECAYAAAAoc91uAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         vAAADrwBlbxySQAAJt9JREFUaEPVmvd/VWXa7mekppDeE9IL6b333nvvvfeQkEISWkILHSmCoCDSVZCi
@@ -17743,7 +17743,7 @@
         TcKY/wOUSou6pGd36QAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="DragoncitoHumano1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="DragonRosa1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADEAAABECAYAAAAoc91uAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         vAAADrwBlbxySQAAJt9JREFUaEPVmvd/VWXa7mekppDeE9IL6b333nvvvfeQkEISWkILHSmCoCDSVZCi
